crates/knot-core/src/snapshots/knot_core__backend__tests__format_codly_call.snap
---
source: crates/knot-core/src/backend.rs
expression: format_codly_call(&options)
---
#codly(lang-radius: 10pt, stroke: 1pt + rgb("#CE412B"))
